--- a/DotnetFinancialTrackerApp/Components/Routes.razor
+++ b/DotnetFinancialTrackerApp/Components/Routes.razor
@@ -20,7 +20,7 @@
             <MudContainer Class="pa-4">
                 <MudText Typo="Typo.h5">Page not found</MudText>
                 <MudText Typo="Typo.body2">The page you're looking for doesn't exist.</MudText>
-                <MudButton Class="mt-3" Href="/dashboard" Color="Color.Primary">Go to Dashboard</MudButton>
+                <MudButton Class="mt-3" Href="/" Color="Color.Primary">Go Home</MudButton>
             </MudContainer>
         </LayoutView>
     </NotFound>
