--- a/DotnetFinancialTrackerApp/Components/Layout/NavMenu.razor
+++ b/DotnetFinancialTrackerApp/Components/Layout/NavMenu.razor
@@ -1,9 +1,10 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="/" Icon="@Icons.Material.Outlined.Dashboard">Home</MudNavLink>
+    <MudNavLink Href="/finance" Icon="@Icons.Material.Outlined.AccountBalance">Finance</MudNavLink>
     <MudNavLink Href="/transactions" Icon="@Icons.Material.Outlined.ReceiptLong">Transactions</MudNavLink>
     <MudNavLink Href="/budgets" Icon="@Icons.Material.Outlined.AccountBalanceWallet">Budgets</MudNavLink>
     <MudNavLink Href="/wellbeing" Icon="@Icons.Material.Outlined.HealthAndSafety">Wellbeing</MudNavLink>
     <MudNavLink Href="/achievements" Icon="@Icons.Material.Outlined.EmojiEvents">Achievements</MudNavLink>
-    <MudNavLink Href="/reports" Icon="@Icons.Material.Outlined.IosShare">Reports</MudNavLink>
+    <MudNavLink Href="/reports" Icon="@Icons.Material.Outlined.QueryStats">Insights</MudNavLink>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Home">Home</MudNavLink>
 </MudNavMenu>
